# voltamper

./: .gitignore  README.md
calc/: .RData  .Rhistory  calc.R  calc.py  task_2.py  volt.txt
calc/2/: calc.R  volt.txt
calc/cfg-50mA/: settings.ini
calc/cfg-7mA/: settings.ini
docs/inductance/: link.txt
docs/maxima-calc/: noninverting-amp-calc.wxm
docs/opamp/: link.txt
docs/relay/: link.txt
drawings/: case-lower-part.gcode  case-lower-part.stl  case-lower-part.x3g  case-v0.1.FCStd  case-v0.1.FCStd1  case-v0.2.FCStd  case-v0.2.FCStd1  case-v0.2.stl  housing.fcstd  housing.fcstd1
drawings/chassis/: base-static-00.fcstd  base-static-00.fcstd1  base-top-00.fcstd  base-top-00.fcstd1  base-top-01.fcstd  base-top-01.fcstd1  gear-test-00.fcstd  gear-test-00.fcstd1  gear-test-01.fcstd  gear-test-01.fcstd1  gear.py  hc-sr501.fcstd  hc-sr501.fcstd1  hc-sr501.scad  hc-sr501.step  hxt900.stp  led-5mm.fcstd  led-5mm.step  servo-00.fcstd  servo-00.fcstd1  servo-arm-00.fcstd  servo-arm-00.fcstd1  servo-arm.step  track-segment-00.fcstd  track-segment-00.fcstd1  track-segment-01.fcstd  track-segment-01.fcstd1  track-segment-02.fcstd1  track-segment-03.fcstd
drawings/chassis/software/: CMakeLists.txt
electrics/: QFN28.kicad_mod
electrics/calc/: dac-out-biasing.wxm  ddpack-7-sink-pos-calc.wxm  volt-biasing.wxm
electrics/calc/elchem-filter-design/: ada4001.cir  attenuator-calc.wxm
electrics/libs/: RLB0914.mod  TDA2030A.mod  ad825.lib  ada4000.lib  cp2102.bak  cp2102.dcm  cp2102.lib  cp2102.mod  lm258a.lib  micro-usb-b.lib  opa551-ddpack-7.mod  opa551.lib  sparta-sip-9007.mod  spartan-sip-9007.lib  stm32f100rct6b.bak  stm32f100rct6b.dcm  stm32f100rct6b.lib  tda2030a.lib
electrics/modelling/: #scheme.sch#  #untitled_2.sch#  netlist.net  result.txt  run.sh  scheme.ckt  scheme.ngspice.ac  scheme.sch~  simulation.cmd
electrics/modelling/elchem-filter/: entire-scheme.ckt  entire-scheme.ngspice.ac  entire-scheme.sch  entire-scheme.sch~
electrics/modelling/models/: Ad825_15V.cir  INA126.LIB  LM258.MOD  OPA551.LIB  ad825.cir
electrics/modelling/opamp/: #entire-scheme.sch#  #opamp.sch#  entire-scheme.ckt  entire-scheme.ngspice.dc  entire-scheme.ngspice.tr  entire-scheme.sch  entire-scheme.sch~  opamp.ckt  opamp.ngspice.ac  opamp.ngspice.dc  opamp.ngspice.tr  opamp.sch  opamp.sch~  run.sh
electrics/modelling/symbols/: ina126.sch  ina126.sym  opa551.sym  opa551.sym~
electrics/scheme/: _autosave-voltamper.kicad_pcb  file577EA4D2.sch  vol6770.tmp  voltamper-cache.lib  voltamper-rescue.lib  voltamper.bak  voltamper.cmp  voltamper.csv  voltamper.kicad_pcb  voltamper.kicad_pcb-bak  voltamper.net  voltamper.pro  voltamper.sch  voltamper_edited.csv
electrics/scheme-save/: voltamper.csv  voltamper.dsn  voltamper.kicad_pcb  voltamper.net
electrics/scheme-save/gerber/: voltamper-B_SilkS.gbo  voltamper-Edge_Cuts.gbr  voltamper.drl  (+1 more)
firmware/firmware/: .cproject  .project
firmware/voltamp/: .cproject  Makefile  chconf.h  halconf.h  mcuconf.h
software/: CMakeLists.txt  settings.unix.cmake  settings.win32.cmake
software/3dparty/: CMakeLists.txt  build_ice  build_ice.sh
software/3dparty/cp2102-26x/: cp210x.c  cp210x_gpio_example.c
software/3dparty/libqtlua-2.0/: CMakeLists.txt
software/3dparty/libqtlua-2.0/src/: CMakeLists.txt  qtluamethod.cc  qtluaqtlib.cc  qtluastate.cc  qtluatablegridmodel.cc  qtluatabletreemodel.cc
software/3dparty/libqtlua-2.0/src/QtLua/: qtluaref.hh  qtluauseritem.hh
software/3dparty/libqtlua-2.0/src/internal/: qtluapoolarray.hh
software/3dparty/lua-5.3.0/: CMakeLists.txt
software/3dparty/qextserialport/: CMakeLists.txt
software/3dparty/qextserialport/src/: qextserialenumerator.cpp  qextserialport.cpp
software/3dparty/qwt-6.1.2/: CMakeLists.txt
software/cp2102-26x/: CP210x_VCP_Linux_2.6.x_Release_Notes.txt
software/gaw3-20141027/: .cproject  .project  ChangeLog  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac
software/gaw3-20141027/lib/: Makefile  Makefile.am  Makefile.in  appclass.h  array.c  dbuf.c  sockcon.c  ss_spice3.c  strobj.c  strobj.h  stutil.c
software/gaw3-20141027/lib/.deps/: appclass.Po  appmem.Po  array.Po  arraystr.Po  arraystruct.Po  dataset.Po  dbuf.Po  dlist.Po  dliststr.Po  duprintf.Po  fdbuf.Po  fileformat.Po  fileutil.Po  fsutil.Po  incvar.Po  msglog.Po  sndparams.Po  sndstream.Po  sockcon.Po  spicestream.Po  ss_cazm.Po  ss_hspice.Po  ss_nsout.Po  ss_spice2.Po  ss_spice3.Po  ss_wav.Po  strcatdup.Po  strmem.Po  strobj.Po  stutil.Po  util.Po  wavetable.Po  wavevar.Po
software/gaw3-20141027/po/: Makefile  Makefile.in  POTFILES  fr.gmo  fr.po  gaw3.pot
software/gaw3-20141027/src/: Makefile  Makefile.in  datafile.c  gaw  gawapp.c  gawcolor.c  gawimg.c  gawmain.c  gawpanel.c  gawtext.c  gawzoom.c
software/gaw3-20141027/src/.deps/: datafile.Po  gawabout.Po  gawapp.Po  gawcolor.Po  gawcursor.Po  gawda.Po  gawdnd.Po  gawdraw.Po  gawfile.Po  gawgrip.Po  gawhelp.Po  gawimg.Po  gawio.Po  gawlabel.Po  gawmain.Po  gawmenus.Po  gawmisc.Po  gawpanel.Po  gawsnd.Po  gawtext.Po  gawutil.Po  gawwave.Po  gawzoom.Po  userprefs.Po
software/gaw3-20141027/ttg/: Makefile  appclass.c  dbuf.h  duprintf.c  sockcon.h
software/lib_lua_machine/: CMakeLists.txt
software/libio/: CMakeLists.txt
software/libio/src/: io.cpp  io.h  usbio.h  voltamp_io.cpp  voltamp_io.h
software/test/: CMakeLists.txt
software/test/src/: main.cpp
software/voltamp/: CMakeLists.txt
software/voltamp/lua/: init.lua
software/voltamp/src/: calibration_wnd.cpp  calibration_wnd.h  calibration_wnd.ui  curve.cpp  curve.h  dc_current_wnd.cpp  dc_current_wnd.h  dc_current_wnd.ui  dc_voltage_wnd.cpp  dc_voltage_wnd.h  dc_voltage_wnd.ui  images.qrc  main.cpp  main_wnd.cpp  main_wnd.h  main_wnd.ui  matrix2.hpp  meandr_wnd.cpp  meandr_wnd.h  meandr_wnd.ui  osc_scaler.cpp  oscilloscope_wnd.cpp  oscilloscope_wnd.h  oscilloscope_wnd.ui  single_pulse_wnd.cpp  single_pulse_wnd.h  single_pulse_wnd.ui  sweep_wnd.cpp  sweep_wnd.h  sweep_wnd.ui  vector2.hpp
software/voltamp/src/from_ehg/: main.cpp  osc_main.cpp  osc_main.h  osc_main.ui
(+224 files in other folders)
